output images in product card

--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -2,7 +2,8 @@
 <li data-sex="{{product.sex}}" data-rating="{{product.flooredrating}}" data-duration="{{product.duration}}" data-price="{{product.id}}">
     <a href="/creators/goods/{{product.id}}" class="uk-text-secondary uk-link-reset">
         <div class="uk-card uk-card-hover" style="height:400px; width: 220px; margin: 2%; padding: 0 5% 10% 5%">
-            <img src="{{product.picture}}" width="238px" height="343px" alt="" style="margin-bottom: 2%;">
+            <img src="{{product.picture1}}" width="238px" alt="" style="margin-bottom: 2%;">
+            <!-- height="343px" -->
             <ul style="font-size: 1.2em; padding: 0 2%;" class="uk-nav">
                 <li class="uk-active uk-flex uk-flex-between uk-text-truncate uk-width-1">
                     <p style="margin: 0">{{product.show_price}} ₽ </p>
