--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -6,7 +6,29 @@
 <div class="uk-card uk-card-default uk-card-body uk-width-4-5" style="margin: 0  auto">
     <container class="container uk-flex uk-flex-center uk-flex-top uk-width-1">
         <div class="uk-display-inline-block uk-width-1-2 uk-text-center">
-            <img src="{{product.picture}}" alt="" width="500">
+            <div class="uk-position-relative" uk-slideshow="animation: fade">
+
+                <ul class="uk-slideshow-items">
+                    <li>
+                        <img src="{{product.picture1}}" alt="" uk-cover>
+                    </li>
+                    <li>
+                        <img src="{{product.picture2}}" alt="" uk-cover>
+                    </li>
+                    <li>
+                        <img src="{{product.picture3}}" alt="" uk-cover>
+                    </li>
+                </ul>
+            
+                <div class="uk-position-bottom-center uk-position-small">
+                    <ul class="uk-thumbnav">
+                        <li uk-slideshow-item="0"><a href="#"><img src="{{product.picture1}}" width="100" height="67" alt=""></a></li>
+                        <li uk-slideshow-item="1"><a href="#"><img src="{{product.picture2}}" width="100" height="67" alt=""></a></li>
+                        <li uk-slideshow-item="2"><a href="#"><img src="{{product.picture3}}" width="100" height="67" alt=""></a></li>
+                    </ul>
+                </div>
+            
+            </div>
         </div>
         <div class="uk-flex uk-flex-column uk-width-1-2">
             <div>
