--- a/bizopt/BO/templates/footer.html
+++ b/bizopt/BO/templates/footer.html
@@ -13,9 +13,10 @@
     <div class="uk-flex-row">
         <h3 style="color: white">ДЛЯ ПАРТНЕРОВ</h3>
         <ul class="uk-nav uk-navbar-dropdown-nav">
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Стать партнёром</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="/partners/">Стать партнёром</a></li>
             <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Личный кабинет партнёра</a></li>
             <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Документация для партнёров </a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Документы </a></li>
         </ul>
     </div>
     <div class="uk-flex-row">
