made some changes pt2

--- a/bizopt/BO/templates/addTask.html
+++ b/bizopt/BO/templates/addTask.html
@@ -71,9 +71,9 @@
         <div style="margin-top: 2%">
             <a href="#" class="uk-button" style="background-color: #E5E5E5; display: block;  text-align:center">Создать</a>
         </div>
-        <div style="margin-top: 2%">
-            <a href="#" class="uk-button" style="background-color: #E5E5E5; display: block;  text-align:center">Чаты</a>
-        </div>
+        <!-- <div style="margin-top: 2%"> -->
+            <!-- <a href="#" class="uk-button" style="background-color: #E5E5E5; display: block;  text-align:center">Чаты</a> -->
+        <!-- </div> -->
     </div>
 </div>
 
