--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -55,7 +55,7 @@
                 </li> -->
                 <li class="uk-active Btn">
                     <button class="uk-button uk-button-default uk-margin-bottom"
-                        style="background:  #0A3644; width:70%; border: solid #0A3644 2px" inclick="infoStart()">Информация</button>
+                        style="background:  #0A3644; width:70%; border: solid #0A3644 2px" inclick="infoStart()">Аккаунт</button>
                 </li>
                 <li class="uk-active Btn">
                     <button class="uk-button uk-button-default uk-margin-bottom"
