--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -74,7 +74,7 @@
                 <form id="regForm" class="uk-width-4-5" action="/becomeCreator/" method="POST">
 
                     <div class="tab" style="display: block">
-                        <h2 class="uk-text-center">Юредические данные</h2>
+                        <h2 class="uk-text-center">Юридические данные</h2>
                         <h4 class="uk-text-center">Введите данные</h4>
                         <br>
                         <div class="uk-width-4-5 uk-flex uk-flex-between" style="margin: 0 auto">
