--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -142,7 +142,7 @@
                             <a class="uk-button uk-text-bold uk-button-link category"
                                 onclick="selectCategory(this)">Обувь</a>
                             <a class="uk-button uk-text-bold uk-button-link category"
-                                onclick="selectCategory(this)">Украшения</a>
+                                onclick="selectCategory(this)">сумки</a>
                             <a class="uk-button uk-text-bold uk-button-link category"
                                 onclick="selectCategory(this)">Интерьер</a>
                             <a class="uk-button uk-text-bold uk-button-link category"
