--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -46,14 +46,14 @@
                             {{ form8.category }}
                         </div>
                         <div class="uk-width-1 uk-margin-small-bottom">
-                            <label>Страна произваодетеля <i
+                            <label>Страна произваодетель <i
                                     uk-tooltip="Выберите страну, в которой товар был изготовлен"
                                     uk-icon="question"></i></label>
                             {{ form8.country }}
                         </div>
                         <div class="uk-width-1 uk-margin-small-bottom">
                             <label> Пол <i
-                                    uk-tooltip="Выберите подходящий пол для иовара"
+                                    uk-tooltip="Выберите подходящий пол для товара"
                                     uk-icon="question"></i></label>
                             {{ form8.sex }}
                         </div>
