--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -12,8 +12,7 @@
         <p style="margin: 0px"> Регион <b>Москва</b></p>
     </div>
 
-    <a href="/partners/" class="uk-button uk-button-text"
-        style="text-transform: none; font-size: 20px;">Стать
+    <a href="/partners/" class="uk-button uk-button-text" style="text-transform: none; font-size: 20px;">Стать
         партнером</a>
 </div>
 <div style="width: 100%; border-top: 2px solid; border-radius: 20px;"></div>
@@ -21,21 +20,22 @@
     <nav class="uk-navbar-container uk-flex uk-flex-middle uk-flex-betwee" uk-navbar
         style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
         <div class="uk-navbar-left uk-width-3-5">
-            <ul class="uk-navbar-nav">
-
-                <li class="uk-active uk-width-2-5 uk-margin-small-left uk-margin-small-top">
+            <ul class="uk-navbar-nav uk-width-1 uk-flex uk-flex-between">
+    
+                <li class="uk-active uk-width-1-4 uk-margin-small-left uk-margin-small-top">
                     <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
                         <img src="../../../media/logoImage/logo.svg" alt="" class="uk-width-1-5" height="100">
                         <img src="../../../media/logoImage/logo_text.svg" alt="" class="uk-width-4-5" height="100">
                     </a>
                 </li>
-
-                <li class="uk-active uk-margin-left uk-flex uk-flex-middle uk-width-1-4">
+    
+                <li class="uk-active uk-flex uk-flex-middle uk-flex-center uk-width-3-4">
                     <a href="/creators/resumes/" style="font-size: 25px; text-transform: none;">Бренды</a>
                     <div class="uk-divider-vertical uk-margin-remove"
                         style="height: 50%; background-color: black; width: 2px"></div>
                     <a href="/creators/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
                 </li>
+    
             </ul>
         </div>
         <div class="uk-navbar-right uk-flex uk-flex-middle uk-flex-right uk-width-2-5">
@@ -62,7 +62,7 @@
                             </li>
                             <li class="uk-nav-divider"></li>
                             <li class="uk-active"><a href="/edit/">Настройки профиля</a></li>
-                            <li class="uk-active"><a href="/chats">Чаты</a></li>
+                            <!-- <li class="uk-active"><a href="/chats">Чаты</a></li> -->
                             <li class="uk-active"><a href="/logout/">Выйти</a></li>
                         </ul>
                     </div>
@@ -90,29 +90,26 @@
 <div style="width: 100%; border-top: 2px solid"></div>
 <nav class="uk-navbar-container" uk-navbar
     style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
-    <div class="uk-navbar-left">
-        <ul class="uk-navbar-nav">
+    <div class="uk-navbar-left uk-width-3-5">
+        <ul class="uk-navbar-nav uk-width-1 uk-flex uk-flex-between">
 
-            <li class="uk-active" style="margin: 0 5%">
+            <li class="uk-active uk-width-1-4 uk-margin-small-left uk-margin-small-top">
                 <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
                     <img src="../../../media/logoImage/logo.svg" alt="" class="uk-width-1-5" height="100">
                     <img src="../../../media/logoImage/logo_text.svg" alt="" class="uk-width-4-5" height="100">
                 </a>
             </li>
 
-            <li class="uk-active uk-margin-left">
+            <li class="uk-active uk-flex uk-flex-middle uk-flex-center uk-width-3-4">
                 <a href="/creators/resumes/" style="font-size: 25px; text-transform: none;">Бренды</a>
-            </li>
-            <li class="uk-flex uk-flex-middle">
                 <div class="uk-divider-vertical uk-margin-remove"
                     style="height: 50%; background-color: black; width: 2px"></div>
-            </li>
-            <li class="uk-active">
                 <a href="/creators/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
             </li>
 
         </ul>
     </div>
+
     <div class="uk-navbar-right uk-flex uk-flex-middle uk-flex-right uk-width-2-5">
         <div class="uk-search uk-search-default uk-width-expand">
             <a type="submit" href="" id="searchBtn" uk-search-icon></a>
@@ -144,10 +141,10 @@
                 <a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Украшения" class="uk-button uk-button-text">Интерьер</a>
+                <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Украшения</a>
+                <a href="/creators/goods/category/Аксессуары" class="uk-button uk-button-text">Аксессуары</a>
             </li>
         </ul>
     </div>
