--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -36,8 +36,8 @@
                             <button class="uk-button uk-button-danger uk-border-rounded uk-width-auto"
                                 style="margin: 0 1%" name="decline" value="{{product.id}}"
                                 type="submit">Отказаться</button>
-                            <a class="uk-button uk-button-primary uk-border-rounded uk-width-auto {{product.chat}}"
-                                id="cahtBtn" style="margin: 0 1%" type="button">Чат</a>
+                            <!-- <a class="uk-button uk-button-primary uk-border-rounded uk-width-auto {{product.chat}}" -->
+                                <!-- id="cahtBtn" style="margin: 0 1%" type="button">Чат</a> -->
                         </div>
                     </div>
                 </div>
