--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -43,7 +43,7 @@
 <body style="margin: auto" onload="showNotification('{{user.is_inwaiting}}')">
     <section style="padding: 0 10px" clss="uk-card-body" id="header">
         <nav uk-sticky="start: 200; animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-navbar-transparent uk-dark"
-            class="uk-navbar-container" uk-navbar style="color: black; padding: 0 5%;">
+            class="uk-navbar-container" uk-navbar style="color: black; padding: 0 5%; border-bottom-left-radius: 10px; border-bottom-left-radius: 10px">
             <div class="uk-navbar-left">
 
                 <ul class="uk-navbar-nav">
@@ -151,9 +151,8 @@
                 <div class="uk-card-body uk-flex uk-flex-center uk-flex-column" style="padding-top: 30%;">
                     <p class="uk-card-title uk-text-bold uk-text-break" style="font-size: 40px;">Вы ведете бизнес так,
                         как удобно вам!</p>
-                    <p>Вы можете управлять продажами с любого устройства, в том числе с мобильного телефона или
-                        планшета.</p>
-                    <p>Но пока только черезз сайт</p>
+                    <p>Вы можете управлять продажами, публиковать товары и проводить сделки с мобильного телефона или
+                        планшета</p>
                 </div>
             </div>
         </div>
@@ -224,118 +223,17 @@
         <div id="about_company" class="uk-padding-large">
             <div>
 
-                <div class="uk-flex uk-flex-center">
-                    <div class="card-holder uk-width-1-4 uk-text-center">
-                        <div class="uk-card uk-card-default"
-                            style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: aliceblue;">
-                            <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle"
-                                    style="height: 150px; width: 150px;border: 3px solid gray;"
-                                    src="../../media/projectCreatorsImages/яна.png">
-                            </div>
-                            <div class="uk-card-body" style="padding-top: 10px;">
-                                <h3 class="uk-card-title uk-text-center">Босякова Яна</h3>
-                                <p class="uk-text-break">СТО, TechLeader
-                                    Backend</p>
-                                <div class="uk-width-1" style="border-top: 3px dotted"></div>
-                                <p class="uk-text-break">Разработка и
-                                    поддержка продукта</p>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="card-holder uk-width-1-4 uk-text-center">
-                        <div class="uk-card uk-card-default"
-                            style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: aliceblue;">
-                            <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle"
-                                    style="height: 150px; width: 150px;border: 3px solid gray;"
-                                    src="../../media/projectCreatorsImages/ваня.png">
-                            </div>
-                            <div class="uk-card-body" style="padding-top: 10px;">
-                                <h3 class="uk-card-title uk-text-center">Коротихин Иван</h3>
-                                <p class="uk-text-break">Backend</p>
-                                <div class="uk-width-1" style="border-top: 3px dotted"></div>
-                                <p class="uk-text-break">Разработка продукта</p>
-                            </div>
-                        </div>
-                    </div>
+                <article class="uk-article">
 
-                    <div class="card-holder uk-width-1-4 uk-text-center">
-                        <div class="uk-card uk-card-default"
-                            style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: aliceblue;">
-                            <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle"
-                                    style="height: 150px; width: 150px;border: 3px solid gray;"
-                                    src="../../media/projectCreatorsImages/женя.png">
-                            </div>
-                            <div class="uk-card-body" style="padding-top: 10px;">
-                                <h3 class="uk-card-title uk-text-center">Дегтярев Евгений</h3>
-                                <p class="uk-text-break">CEO, TeamLeader</p>
-                                <div class="uk-width-1" style="border-top: 3px dotted"></div>
-                                <p class="uk-text-break">Стратегия, финансы,
-                                    организация,
-                                    разработка и
-                                    поддержка продукта</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    <p class="uk-text-lead uk-text-break"> Мы - маркетплейс российских брендов. Наша главная цель -
+                        увеличение продаж товаров российских брендов и безопасной покупки уникальных продуктов, которая
+                        позволяет покупателям заказать качественную дизайнерскую вещь, а владельцам бесплатно продвигать
+                        свои магазины. Скорее присоединяйся к нашей дружной команде и проводи свои первые сделки.
+                    </p>
 
-                <div class="uk-flex uk-flex-center">
-                    <div class="card-holder uk-width-1-4 uk-text-center">
-                        <div class="uk-card uk-card-default"
-                            style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: #f0f8ff;">
-                            <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle"
-                                    style="height: 150px; width: 150px;border: 3px solid gray;"
-                                    src="../../media/projectCreatorsImages/митя.png">
-                            </div>
-                            <div class="uk-card-body" style="padding-top: 10px;">
-                                <h3 class="uk-card-title uk-text-center">Коростылев Дмитрий</h3>
-                                <p class="uk-text-break">СТО, TechLeader Frontend</p>
-                                <div class="uk-width-1" style="border-top: 3px dotted"></div>
-                                <p class="uk-text-break">Разработка и поддержка продукта</p>
-                            </div>
-                        </div>
-                    </div>
+                </article>
 
-                    <div class="card-holder uk-width-1-4 uk-text-center">
-                        <div class="uk-card uk-card-default"
-                            style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: #f0f8ff;">
-                            <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle"
-                                    style="height: 150px; width: 150px;border: 3px solid gray;"
-                                    src="../../media/projectCreatorsImages/эмилия.png">
-                            </div>
-                            <div class="uk-card-body" style="padding-top: 10px;">
-                                <h3 class="uk-card-title uk-text-center">Мамедова Эмилия
-                                </h3>
-                                <p class="uk-text-break">CMO, Backend</p>
-                                <div class="uk-width-1" style="border-top: 3px dotted"></div>
-                                <p class="uk-text-break">Разработка продукта</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card-holder uk-width-1-4 uk-text-center">
-                        <div class="uk-card uk-card-default"
-                            style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: #f0f8ff;">
-                            <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle"
-                                    style="height: 150px; width: 150px;border: 3px solid gray;"
-                                    src="../../media/projectCreatorsImages/даша.png">
-                            </div>
-                            <div class="uk-card-body" style="padding-top: 10px;">
-                                <h3 class="uk-card-title uk-text-center">Федорова Дарья
-                                </h3>
-                                <p class="uk-text-break">Frontend</p>
-                                <div class="uk-width-1" style="border-top: 3px dotted"></div>
-                                <p class="uk-text-break"> Разработка продукта</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
             </div>
         </div>
@@ -404,6 +302,7 @@
             </div>
         </div>
     </section>
+{% include "footer.html" %}
 
 </body>
 
@@ -521,7 +420,7 @@
 
     function showNotification(el) {
         console.log(el)
-        if (el) {
+        if (el == "True") {
             Swal.fire(
                 'Ваша заявки принята',
                 'Наш сотрудник свяжется с вами в ближайшее время',
