--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -17,7 +17,7 @@
                         <th class="uk-text-center uk-width-auto">Статус</th>
                         <th class="uk-text-center uk-width-auto">Отказаться/Завершить</th>
                         <th class="uk-text-center uk-width-auto">Посмотреть пожелания</th>
-                        <th class="uk-text-center uk-width-auto">Сообщения</th>
+                        <!-- <th class="uk-text-center uk-width-auto">Сообщения</th> -->
                     </tr>
                 </thead>
                 <!-- товары в работе -->
@@ -69,9 +69,9 @@
                                 </div>
                             </div>
                         </td>
-                        <td class="uk-text-center">
+                        <!-- <td class="uk-text-center">
                             <a type="submit" class="uk-button uk-button-default" href="/chat/{{product.chat_id}}">Написать</a>
-                        </td>
+                        </td> -->
 
                     </tr>
                     {% endfor %}
@@ -131,9 +131,9 @@
                                 </div>
                             </div>
                         </td>
-                        <td class="uk-text-center">
+                        <!-- <td class="uk-text-center">
                             <a type="submit" class="uk-button uk-button-default" href="/chat/{{product.chat_id}}">Написать</a>
-                        </td>
+                        </td> -->
                     </tr>
                     {% endfor %}
                 </tbody>
