--- a/bizopt/BO/templates/documentsTemplates/template2.html
+++ b/bizopt/BO/templates/documentsTemplates/template2.html
@@ -1,17 +1,47 @@
 <div class="section uk-width-4-5" style="margin: 2% auto;">
-    <article class="uk-article">
 
-        <h1 class="uk-article-title">Heading</h1>
+    <hr>
 
-        <p class="uk-text-lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+    <h1>Оплата</h1>
 
-    </article>
+    <br>
+    <hr>
+    <br>
+    <div>
+        <p>
+            Оплата на сайте возможна с помощью банковских карт, 
+            Apple Pay и Google Pay, Qiwi и других систем. Производится системой Точка Банк.
+        </p>
+
+
+        <p>
+            После оформления и оплаты заказа вы получите письмо на электронную почту, 
+            указанной при регистрации, в которой мы сообщим вам, что Заказ находится в обработке.
+            <br>
+            Как только заказ будет подтвержден, вам на электронную почту придет 
+            чек о покупке, а также письмо с подтверждением Заказа и информацией о доставке.
+        </p>
+
+
+        <p>
+            Если в заказе есть товарная позиция, которой не оказалось в наличии, с вами свяжется наш менеджер, 
+            чтобы подтвердить или отменить заказ, 
+            в зависимости от этого сумма заказа будет пересчитана и списана, либо возвращена в полном объеме.
+        </p>
+
+
+        <p>
+            В процессе формирования заказа в вашем Личном кабинете статус каждого отправления будет меняться: 
+            «На подтверждении», «Отправлен», «В доставке», «Доставлен» или «Отменен».
+        </p>
+
+        <br>
+        <p>
+            Если у вас остались вопросы, напишите нам на info@vitrinabrands.com.
+        </p>
+
+    </div>
+
+
 </div>
