--- a/bizopt/BO/templates/documents.html
+++ b/bizopt/BO/templates/documents.html
@@ -12,37 +12,40 @@
 <body style="margin: 0 auto; ">
 <div class="uk-position-left uk-width-1">
 
-    <div class="uk-card uk-card-default uk-card-body uk-width-1-5@s" style="height: 100%;">
+    <div class="uk-card uk-card-default uk-card-body uk-width-1-3@s" style="height: 100%;">
         <ul class="uk-flex uk-flex-column uk-nav-default uk-text-center uk-margin-large-top" uk-nav>
-            <li class="Btn uk-text-center uk-width-2-3" style="margin: 5px auto;">
+            <li class="Btn uk-text-center uk-width-2-3" style="margin: 10px auto;">
                 <button class="uk-button uk-button-text uk-width-1 uk-text-break"
-                    style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px; padding-bottom: 10px;">Настройки
-                    профиля</button>
+                    style="margin: 0 auto; font-size: 20px; text-transform: uppercase; font-size: 20px; padding-bottom: 10px;">Доставка</button>
             </li>
-            <li class="Btn uk-text-center uk-width-2-3" style="margin: 5px auto;">
+            <li class="Btn uk-text-center uk-width-2-3" style="margin: 10px auto;">
                 <button class="uk-button uk-button-text uk-width-1 uk-text-break"
-                    style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px; padding-bottom: 10px;">Информация
-                    о продавцe</button>
+                    style="margin: 0 auto; font-size: 20px; text-transform: uppercase; font-size: 20px; padding-bottom: 10px;">Оплата</button>
             </li>
 
-            <li class="Btn uk-text-center uk-width-2-3" style="margin: 5px auto;">
+            <li class="Btn uk-text-center uk-width-2-3" style="margin: 10px auto;">
                 <button class="uk-button uk-button-text uk-width-1 uk-text-break"
-                    style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px;">Магазин</button>
+                    style="margin: 0 auto; font-size: 20px; text-transform: uppercase; font-size: 20px;">Обмен и возврат</button>
             </li>
 
-            <li class="Btn uk-text-center uk-width-2-3" style="margin: 5px auto;">
+            <li class="Btn uk-text-center uk-width-2-3" style="margin: 10px auto;">
                 <button class="uk-button uk-button-text uk-width-1 uk-text-break"
-                    style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px;">кабинет</button>
+                    style="margin: 0 auto; font-size: 20px; text-transform: uppercase; font-size: 20px;">Оферта</button>
             </li>
 
-            <li class="Btn uk-text-center uk-width-2-3" style="margin: 5px auto;">
+            <li class="Btn uk-text-center uk-width-2-3" style="margin: 10px auto;">
                 <button class="uk-button uk-button-text uk-width-1 uk-text-break"
-                    style="margin: 0 auto; font-size: 20px; text-transform: lowercase; font-size: 20px;">Товары</button>
+                    style="margin: 0 auto; font-size: 20px; text-transform: uppercase; font-size: 20px;">Политика конфиденциальности</button>
+            </li>
+
+            <li class="Btn uk-text-center uk-width-2-3" style="margin: 10px auto;">
+                <button class="uk-button uk-button-text uk-width-1 uk-text-break"
+                    style="margin: 0 auto; font-size: 20px; text-transform: uppercase; font-size: 20px;">Юридические данные</button>
             </li>
         </ul>
     </div>
 
-    <div id="content" class="uk-width-4-5@s uk-position-right">
+    <div id="content" class="uk-width-2-3@s uk-position-right">
         <div style="margin: 0 auto; padding: 0 2%;width: 90%;">
             <nav class="uk-navbar-container" uk-navbar
                 style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
@@ -51,8 +54,8 @@
 
                         <li class="uk-active">
 
-                            <h1 class="uk-margin-remove"><a href="/" style="color: black">BeFreela</a> Правовые
-                                документы</h1>
+                            <h1 class="uk-margin-remove"><a href="/" style="color: black">BeFreela</a>
+                                Документы</h1>
 
                         </li>
                     </ul>
