--- a/bizopt/BO/templates/documentsTemplates/template1.html
+++ b/bizopt/BO/templates/documentsTemplates/template1.html
@@ -1,17 +1,80 @@
 <div class="section uk-width-4-5" style="margin: 2% auto;">
-    <article class="uk-article">
 
-        <h1 class="uk-article-title">Heading</h1>
+    <hr>
 
-        <p class="uk-text-lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+    <h1>Доставка</h1>
 
-    </article>
+    <br>
+    <hr>
+    <br>
+
+    <div>
+        <p>При оформлении заказа вы можете выбрать доставку курьером или в отделение СДЭК. 
+            После оформления заказа статус каждого отдельного отправления отображается в Личном кабинете. 
+            Если в заказе есть позиции от разных брендов, то заказ придет отдельными посылками 
+            (оплата доставки производится только один раз при оформлении заказа вне зависимости от количества товаров разных брендов). 
+        </p>
+
+    <h3>
+        Доставка курьером по России: 
+    </h3>
+
+        <p>
+            Стоимость доставки курьером до двери для любого города России — 399 рублей. 
+            <br>
+
+            Сроки доставки: 
+            <br>
+
+            Москва, Московская область — 3-5 рабочих дня.
+            <br>
+
+            Другие города России — 4-8 рабочих дней. 
+            <br>
+
+            Курьер заранее свяжется с вами, чтобы договориться о дате и времени передачи товара.
+        </p>
+
+    <h3>
+        Доставка в пункт выдачи СДЭК по России: 
+    </h3>
+
+        <p>
+            Стоимость доставки в пункт выдачи для любого города России — 199 рублей. Сроки доставки: 
+            <br>
+
+            Москва, Московская область — 3-5 рабочих дня.
+            <br>
+
+            Другие города России — 4-8 рабочих дней. 
+            <br>
+
+            Когда заказ поступит в выбранный пункт выдачи, вам придет SMS-уведомление Найти пункты выдачи в своем городе и уточнить сроки доставки вы можете на сайте СДЭК.
+        </p>
+    </div>
+
+    <h3>
+        Международная доставка (в том числе страны СНГ): 
+    </h3>
+
+        <p>
+            Стоимость и способ международной доставки рассчитывается индивидуально.
+            <br>
+
+            Если при оформлении заказа вы выбрали международную доставку, 
+            то мы свяжемся с вами в течение 1-2 дней, чтобы определить способ и стоимость такой доставки. 
+            После вашего подтверждения мы отправим ссылку на оплату.         
+            <br>
+
+            Далее, после успешной оплаты, мы передадим заказ в согласованную службу доставки и отправим вам номер для отслеживания посылки.        </p>
+        <p>
+            При международной доставке на покупателя может быть возложена обязанность по уплате таможенных сборов, 
+            налогов и иных обязательных платежей в соответствии с законодательством страны, в которую оформлена доставка. 
+            Такие платежи не включены в цену товара.        </p>
+    </div>
+
+    <br>
+    <br>
+            
 </div>
